fix(Card) Fix text size on mobile

--- a/assets/styles/scss/pages/home.scss
+++ b/assets/styles/scss/pages/home.scss
@@ -253,6 +253,29 @@
 
     h2, h3{
       word-break: break-word;
+      font-size: 20px;
+    }
+
+    .post-item{
+      .post-link{
+        h3{
+          margin-bottom: 10px;
+        }
+      }
+    }
+    
+    .last-post{
+      .post-list{
+        .post-link{
+          h3{
+            font-size: 20px;
+            margin-bottom: 10px;
+          }
+          p{
+            font-size: 16px;
+          }
+        }
+      }
     }
   }
 }
